Fix navmenu on mobile (Bootstrap 5)

--- a/partials/_responsive.scss
+++ b/partials/_responsive.scss
@@ -243,7 +243,7 @@
     }
 
     #search-btn {
-	  position: relative;
+      display: none;
     }
 
     .header-search-bar {
